welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:18: error: Missing closing brace `}' assumed here
var couleuravant: Boolean = true;
^